fixed border in globalheader
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/src/sass/components/globalheader.scss
+++ b/src/sass/components/globalheader.scss
@@ -16,6 +16,10 @@
 	padding-right: 1em;
 	border-right: 1px solid #fff;
 	vertical-align: middle;
+
+	&.globalheader--light {
+		border-color: $uikit-colour-Text;
+	}
 }
 
 .globalheader__logo__svg {
