fixed border in globalheader
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/src/sass/components/globalheader.scss
+++ b/src/sass/components/globalheader.scss
@@ -17,7 +17,7 @@
 	border-right: 1px solid #fff;
 	vertical-align: middle;
 
-	&.globalheader--light {
+	.globalheader--light & {
 		border-color: $uikit-colour-Text;
 	}
 }
