--- a/src/sass/base/document.scss
+++ b/src/sass/base/document.scss
@@ -3,3 +3,17 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+.container {
+	max-width: 100%;
+	margin: 0 12px;
+
+	@media (min-width: 1124px) {
+		max-width: 1100px;
+		margin: 0 auto;
+	}
+}
+
+.textwrapper {
+	max-width: ( $uikit-maxwidth - 5);
+}
