--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -18,3 +18,4 @@
 @import "components/textblock.scss";
 @import "components/quote.scss";
 @import "components/sections.scss";
+@import "components/404.scss";
