added sticky footer, fixed watch script
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/src/sass/base/document.scss
+++ b/src/sass/base/document.scss
@@ -1,7 +1,17 @@
 html,
 body {
+	height: 100%;
 	margin: 0;
 	padding: 0;
+}
+
+body {
+	display: flex;
+  flex-direction: column;
+}
+
+main {
+	flex: 1 0 auto;
 }
 
 .container {
