added nav to 404 page
Signed-off-by: Dominik Wilkowski <Hi@Dominik-Wilkowski.com>

--- a/src/sass/site.scss
+++ b/src/sass/site.scss
@@ -19,3 +19,4 @@
 @import "components/quote.scss";
 @import "components/sections.scss";
 @import "components/404.scss";
+@import "components/nav.scss";
